# termcolor

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.txt  CHANGES.md  CHANGES.rst  CHANGES.txt  README.md  README.rst  README.txt  RELEASING.md  pyproject.toml  setup.cfg  setup.py  termcolor.py  tox.ini
.github/: FUNDING.yml  SECURITY.md  labels.yml  renovate.json
.github/workflows/: deploy.yml  lint.yml  release-drafter.yml  test.yml
examples/: colored_function_example.py
src/termcolor/: __init__.py  __main__.py  _types.py  attributes.py  termcolor.py
src/termcolor/config/: attributes.py  colors.py  highlights.py
tests/: test_termcolor.py
