[metadata]
name = termcolor
description = ANSI color formatting for output in terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugovk/termcolor
author = Konstantin Lepa
author_email = konstantin.lepa@gmail.com
license = MIT
license_file = COPYING.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Terminals
keywords =
    termcolor
    terminal
    ANSI color
    ANSI colour
    ANSI
    color
    colour
    formatting
project_urls =
    Source=https://github.com/hugovk/termcolor

[options]
packages = find:
python_requires = >=3.7
package_dir = =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov

[flake8]
max_line_length = 88
